--- a/style.css
+++ b/style.css
@@ -54,13 +54,13 @@ img {
 .header {
   border-radius: 16px;
   border: 1px solid #000;
-  background: rgba(123, 74, 226, 0.05);
+  background: #101d30;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   display: flex;
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  padding: 6px 18px;
+  padding: 4px 12px;
   margin-top: 38px;
   margin-bottom: 68px;
   width: 100%;
@@ -107,12 +107,6 @@ img {
   gap: 20px;
 }
 
-.salutation {
-  display: flex;
-  flex-direction: column;
-  gap: 25px;
-}
-
 .tag {
   border-radius: 16px;
   background: rgba(123, 74, 226, 0.10);
@@ -123,6 +117,13 @@ img {
   font-size: 1rem;
   padding: 6px 12px;
   width: fit-content;
+}
+
+.salutation {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  flex: 1;
 }
 
 .salutation .name {
@@ -136,13 +137,10 @@ img {
 }
 
 .avatar {
-  max-width: 600px;
-  max-height: 600px;
-  height: 100%;
-  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
+  flex: 4;
 }
 
 .avatar > svg {
@@ -238,6 +236,19 @@ img {
   display: flex;
   flex-direction: column;
   max-width: 300px;
+  width: 100%;
+}
+
+.projects__item:hover {
+  cursor: pointer;
+  transition: all 0.2s;
+  -webkit-box-shadow: 0px 0px 42px 0px rgba(123,74,226,0.71);
+  -moz-box-shadow: 0px 0px 42px 0px rgba(123,74,226,0.71);
+  box-shadow: 0px 0px 42px 0px rgba(123,74,226,0.71);
+}
+
+.projects__item:hover .projects__item--image {
+  transform: scale(1.1) ;
 }
 
 .projects__item--title, .card-experience--title {
@@ -266,14 +277,18 @@ img {
   display: flex;
   gap: 10px;
   margin-bottom: 20px;
+  flex-wrap: wrap;
+  margin-top: auto;
 }
 
 .projects__item--image {
   width: 100%;
   height: 200px;
   border-radius: 8px;
-  background: url('https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original-wordmark.svg'), no-repeat center white;
+  background: url('/images/github-mark-white.png') no-repeat;
   background-position: center;
+  transition: 0.2s ease all;
+  background-size: contain;
 }
 
 .skills {
@@ -474,6 +489,14 @@ img {
 @media (max-width: 768px) {
   .header > nav {
     display: none;
+  }
+
+  .title {
+    text-align: center;
+  }
+
+  .tag {
+    align-self: center;
   }
 
   .one,
